--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </form>
       </header>
       <main>
-        <div class="container book-shelf mt-2 col-md-9">
+        <div class="container mt-2 col-md-9" id="book-shelf">
           <ul id="book-list"></ul>
         </div>
         <div class="hidden" id="modal-container"></div>
